--- a/css/style.css
+++ b/css/style.css
@@ -15,67 +15,125 @@
 }
 
 
-body {
+
+	body {
+		
+		font-family: 'Gabriola';
+		/*background-image: url(../images/8087815.png);*/
+		/*background-image: url(../images/bg.jpg);*/
+		background-repeat: no-repeat;
+		background-position: top center;
+		background-attachment: fixed;
+		
+
+		/*position: relative;*/
+		background-size: cover;
+background-color: rgba(255, 255, 255, 1)
+	}		
+
+	header {
+		max-width: 990px;
+		font-family: 'BeforeTheRain', Fallback, sans-serif;
+		font-size: 15pt;
+		/*color: #fff;*/
+		text-align: center;
+		padding: 0;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		background-image: url(../images/me.jpg) repeat;
+		
+	}
+	header img {
+		padding-right: 20px;
+		width: 100px;
+		float: left;
+
+	}
+
+	header h1 {
+		/*background-image: url(../images/me.jpg);*/
+
+	}
 	
-	font-family: 'Gabriola', Fallback, sans-serif;
-	/*background-image: url(../images/8087815.png);
-	background-image: url(../images/body_bg.jpg);*/
-	background-repeat: no-repeat;
-    background-position: top center;
-    background-attachment: fixed;
-	height: 100 vh;
-	width: 100 vw;
-	/*position: relative;
-	background-size: cover;*/
+	/*footer {
+		height:150px;
+		background-image: url(../images/footer.jpg);
+		background-size: cover;
+	}*/
+	footer img {
+		
+		width: 30px;
+		
+	}
+	
+	#blocks h3{
+
+			margin-top: -28px;
+	}
+	#blocks{
+		font-family: 'Gabriola', Fallback, sans-serif;
+		/*font-family: 'ArmBoloragir';*/
+		text-align: center;
+		/*border: 1px solid red;
+	    height: 100 vh;
+		width: 100 vw;
+		*/
+		max-width: 990px;
+		padding: 0;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		display: table;
+		/*content: " ";*/
+		
+		
+	}
+	
+
+	#blocks img{
+		
+	width: 300px; 
+	
+
+	}
+	#blocks img:hover {
+  opacity: 0.5;
+}
+	#blocks div{
+		
+	padding: 13px; 
+	float: left;
+	}
+	
+	#content {
+		font-size: 17pt;
+		max-width: 900px;
+		padding: 0;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+		display: table;
+	}
+	#content div{
+	display: none;
+	padding: 13px; 
+
+	}
+	#content div p{
+	
+		
+	
+	}
+	.arm {
+		font-family: 'ArmBoloragir';
+		font-size: 13pt;
+		
+	}
+	.up-arrow {
+	
+		width: 30px;
+		
+	}
 
 	
-}
-header {
-	
-	font-family: 'BeforeTheRain', Fallback, sans-serif;
-	font-size: 15pt;
-	
-}
-header img {
-	
-	width: 50px;
-	
-}
-footer img {
-	
-	width: 30px;
-	
-}
-#mydiv{
-	
-	/*font-family: 'ArmBoloragir';*/
-	position: center;
-    height: 100 vh;
-    width: 100 vw;
-	float: none;
-	
-    
-	
-}
-#mydiv img{
-	
-width: 270px; 
-	
-}
-#mydiv div{
-	
-padding: 20px; 
-	
-}
-#mystory{
-	
-	float: left;
-}
-#mydreams{
-	float: left;
-	/*background-image: url(../images/body_bg.jpg);*/
-}
-#mynutrition{
-	
-	float: left;
-}
