--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 		
 		font-family: 'Gabriola';
 		/*background-image: url(../images/8087815.png);*/
-		/*background-image: url(../images/bg.jpg);*/
+		background-image: url(../images/bg5.png);
 		background-repeat: no-repeat;
 		background-position: top center;
 		background-attachment: fixed;
@@ -28,7 +28,7 @@
 
 		/*position: relative;*/
 		background-size: cover;
-background-color: rgba(255, 255, 255, 1)
+background-color: rgba(255, 255, 255, 0.9)
 	}		
 
 	header {
@@ -36,22 +36,34 @@ background-color: rgba(255, 255, 255, 1)
 		font-family: 'BeforeTheRain', Fallback, sans-serif;
 		font-size: 15pt;
 		/*color: #fff;*/
-		text-align: center;
+		/*text-align: center;*/
 		padding: 0;
+		margin-top: 20px;
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
-		background-image: url(../images/me.jpg) repeat;
+		
+		/*background-image: url(../images/me.jpg) repeat;*/
 		
 	}
+	
 	header img {
-		padding-right: 20px;
-		width: 100px;
+		
+		  border-radius: 15px;
+		      margin-right: 30px;
 		float: left;
+		
+		/*background-image: url(../images/me1.jpg);
+		background-repeat: repeat;*/
 
 	}
 
 	header h1 {
+		padding: 20px;
+		/*margin-top: -70px;*/
+		/*background: -webkit-linear-gradient(#fff, #000);
+	  -webkit-background-clip: text;
+	  -webkit-text-fill-color: transparent;*/
 		/*background-image: url(../images/me.jpg);*/
 
 	}
@@ -67,7 +79,7 @@ background-color: rgba(255, 255, 255, 1)
 		
 	}
 	
-	#blocks h3{
+	#blocks h2{
 
 			margin-top: -28px;
 	}
@@ -114,10 +126,14 @@ background-color: rgba(255, 255, 255, 1)
 		margin-right: auto;
 		width: 100%;
 		display: table;
+		background-color: rgba(250, 250, 250, 0.9);
+		border-radius: 20px;
 	}
 	#content div{
+	
+	
 	display: none;
-	padding: 13px; 
+	padding: 20px; 
 
 	}
 	#content div p{
