--- a/css/style.css
+++ b/css/style.css
@@ -17,64 +17,58 @@
 
 
 	body {
-		
 		font-family: 'Gabriola';
-		/*background-image: url(../images/8087815.png);*/
 		background-image: url(../images/bg5.png);
-		background-repeat: no-repeat;
-		background-position: top center;
-		background-attachment: fixed;
-		
-
-		/*position: relative;*/
 		background-size: cover;
-background-color: rgba(255, 255, 255, 0.9)
+		max-width: 1024px;
+		min-width: 320px;
+		padding: 0;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;	
 	}		
 
 	header {
 		max-width: 990px;
 		font-family: 'BeforeTheRain', Fallback, sans-serif;
 		font-size: 15pt;
-		/*color: #fff;*/
-		/*text-align: center;*/
 		padding: 0;
 		margin-top: 20px;
 		margin-left: auto;
 		margin-right: auto;
 		width: 100%;
 		
-		/*background-image: url(../images/me.jpg) repeat;*/
 		
 	}
-	
-	header img {
-		
-		  border-radius: 15px;
-		      margin-right: 30px;
-		float: left;
-		
-		/*background-image: url(../images/me1.jpg);
-		background-repeat: repeat;*/
 
+	header img {
+		border-radius: 15px;
+		float: left;
 	}
 
 	header h1 {
-		padding: 20px;
-		/*margin-top: -70px;*/
-		/*background: -webkit-linear-gradient(#fff, #000);
-	  -webkit-background-clip: text;
-	  -webkit-text-fill-color: transparent;*/
-		/*background-image: url(../images/me.jpg);*/
-
+		margin-left: 140px;
 	}
 	
-	/*footer {
-		height:150px;
-		background-image: url(../images/footer.jpg);
-		background-size: cover;
-	}*/
+	footer  {
+		clear: both;
+		max-width: 990px;
+		min-width: 320px;
+		padding: 40px 0;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;	
+	}
+	footer div {
+		text-align: center;
+		margin-left: auto;
+		margin-right: auto;
+		font-size: 17pt;
+	}
+	
 	footer img {
-		
+		margin-bottom: -10px;
+		padding-left: 2px; 
 		width: 30px;
 		
 	}
@@ -84,38 +78,31 @@ background-color: rgba(255, 255, 255, 0.9)
 			margin-top: -28px;
 	}
 	#blocks{
+		
 		font-family: 'Gabriola', Fallback, sans-serif;
-		/*font-family: 'ArmBoloragir';*/
 		text-align: center;
-		/*border: 1px solid red;
-	    height: 100 vh;
-		width: 100 vw;
-		*/
 		max-width: 990px;
+		min-width: 320px;
 		padding: 0;
 		margin-left: auto;
 		margin-right: auto;
-		width: 100%;
-		display: table;
-		/*content: " ";*/
-		
-		
+		width: 100%;	
 	}
 	
 
 	#blocks img{
-		
-	width: 300px; 
-	
-
+		width: 300px; 
 	}
+	
 	#blocks img:hover {
-  opacity: 0.5;
-}
+		opacity: 0.5;
+	
+	}
+	
 	#blocks div{
-		
-	padding: 13px; 
-	float: left;
+		padding: 13px; 
+		float: left;
+		cursor: pointer;
 	}
 	
 	#content {
@@ -129,27 +116,33 @@ background-color: rgba(255, 255, 255, 0.9)
 		background-color: rgba(250, 250, 250, 0.9);
 		border-radius: 20px;
 	}
+	
 	#content div{
-	
-	
-	display: none;
-	padding: 20px; 
-
+		display: none;
+		padding: 20px; 
 	}
-	#content div p{
 	
-		
-	
-	}
 	.arm {
 		font-family: 'ArmBoloragir';
 		font-size: 13pt;
 		
 	}
 	.up-arrow {
-	
+		clear: both;
 		width: 30px;
+		margin-left: auto;
+		margin-right: auto;
+        display: block;
 		
 	}
 
-	
+	.books{
+		height: 145px;
+		float: left;
+		padding: 20px;
+		transition: transform .5s;
+		
+	}
+	.books:hover {
+		transform: scale(2.5);
+	}
