--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -1,4 +1,10 @@
-.slideshow-container {
+
+@font-face {
+  font-family: 'BeforeTheRain';
+  src: url('../../fonts/BeforeTheRain.ttf')  format('truetype')
+}
+
+#slideshow-container {
 	max-width:1000px;
 	position:relative;
 	margin:auto;
@@ -10,6 +16,7 @@ img {vertical-align: middle;}
 	cursor:pointer;
 	position:absolute;
 	top: 50%;
+	font-size: 25px;
 	width: auto;
 	margin-top: -22px;
 	padding: 10px;
@@ -19,22 +26,13 @@ img {vertical-align: middle;}
 }
 
 .prev {
-	left:-100px;
+	left:-30px;
 	border-radius: 0 3px 3px 0;
 	
 }
 
-.next img {
-  -webkit-transform: scale(-1, 1);
-  -moz-transform: scale(-1, 1);
-  -ms-transform: scale(-1, 1);
-  -o-transform: scale(-1, 1);
-  transform: scale(-1, 1);
-}
-
-
 .next {
-	right:-100px;
+	right:-30px;
 	border-radius: 3px 0 0 3px;
 	
 }
@@ -43,32 +41,63 @@ img {vertical-align: middle;}
 	background-color:rgba(0,0,0,0.8);
 	
 }
+/*
+@keyframes bg {
+  0%   {background-color: rgba(255,255,255,0);}
+  25%  {background-color: rgba(255,255,255,0.3);}
+  50%  {background-color: rgba(255,255,255,0.6);}
+  100% {background-color: rgba(255,255,255,0.9);}
+}*/
 
-.desctiption {
-	color: #f2f2f2;
-	font-size: 15px;
-	padding: 8px 12px;
-	position: absolute;
-	bottom: 8px;
-	width: 100%;
-	text-align: center;
+@keyframes bg {
+	0% {background-color: rgba(255,255,255,0.3);font-size: 15pt; color: #000;}
+	25% {background-color: rgba(255,255,255,0.9);font-size: 25pt; color: #000;} 
+	50% {background-color: rgba(255,255,255,0.9);font-size: 25pt; color: #000;}
+	100 %{background-color: rgba(255,255,255,0.3);font-size: 15pt; color: #000;}
 }
 
-.switcher {
-	cursor:pointer;
-	height: 13px;
-	width: 13px;
-	margin: 0 5px;
-	background-color: #bbb;
-	border-radius: 50%;
-	display: inline-block;
-	transition: background-color 0.6s ease;
+.desctiption {
+	max-width:1000px;
+	position:relative;
+	margin:auto;
+	border-radius: 40px;
+    font-family: 'BeforeTheRain', Fallback, sans-serif;
+	font-size: 20pt;
+	color: #fff;
+    padding: 0 50px;
+    position: absolute;
+    font-weight: bold;
+    top: 10px;
+    left: 10px;
+    width: auto;
+    text-align: left;
+    animation-name: bg;
+	animation-duration: 4s;
+}
+#switchersDiv{
+
+		width:100%;
+		position:absolute;
+		margin:auto;
+		bottom: -50px;
 	
 }
 
-.active,  .switcher:hover {
-	background-color: #717171;
+.flex-container {
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-items: flex-end;
+	flex-basis: 200px;
+	
 }
+.switcher {
+	cursor:pointer;
+	margin: 0 10px;
+	display: inline-block;
+}
+
+
 
 .fade {
 	-webkit-animation-name: fade;
@@ -90,12 +119,17 @@ img {vertical-align: middle;}
 	from{opacity: .4}
 	to{opacity:1}
 }
+/*
+@keyframes fade{
+	from{opacity: .4}
+	to{opacity:1}
+}
+*/
 
 @keyframes fade{
 	from{opacity: .4}
 	to{opacity:1}
 }
-
 @media only screen and (max-width: 300px) {
   .desctiption {font-size: 11px}
 }
