--- a/slider/css/style.css
+++ b/slider/css/style.css
@@ -61,18 +61,17 @@ img {vertical-align: middle;}
 .desctiption {
 	max-width:1000px;
 	margin:auto;
-	border-radius: 40px;
 	font-family: 'Gabriola', Fallback, sans-serif;
-  	font-size: 0pt;
+	font-size: 0pt;
 	color: #fff;
-    padding: 0 50px;
-    position: absolute;
-    font-weight: bold;
-    top: 10px;
-    left: 10px;
-    width: auto;
-    text-align: left;
-    animation-name: bg;
+	padding: 0 50px;
+	position: absolute;
+	font-weight: bold;
+	top: 20px;
+	left: 10px;
+	width: auto;
+	text-align: left;
+	animation-name: bg;
 	animation-duration: 5s;
 }
 #switchersDiv{
@@ -139,4 +138,8 @@ img {vertical-align: middle;}
 }
 @media only screen and (max-width: 300px) {
   .desctiption {font-size: 11px}
+}
+.paused{
+	border: 10px solid black;
+	box-sizing: border-box;
 }
